# rgfx

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  SECURITY.md  install_ram_monitor.lua  launch.sh  mosquitto.conf  mqtt.lua  package-lock.json  package.json  pacman_rgfx.lua  ram.lua  rgfx.code-workspace  rgfx.lua  rgfx_mqtt_bridge.py  rgfx_mqtt_monitor.py  test.lua  todo.txt
.claude/: CLAUDE.md  claude.md  settings.json
.claude/agents/: assembly-8bit-expert.md  electron-code-reviewer.md  gitlab-expert.md  lua-mame-expert.md  platformio-esp32-expert.md  rgfx-hub-developer.md  rgfx-project-manager.md
.claude/docs/: architecture.md  broker-discovery.md  coding-standards.md  development-workflow.md  esp32-development.md  mame-integration.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-docs.yml  nightly-tests.yml  pr-validation.yml  release.yml
.gitlab/issue_templates/: bug_report.md  feature_request.md
.gitlab/merge_request_templates/: default.md
cfg/: pacman.cfg
docs/: aedes.md  architecture.md  arduino-mqtt.md  configuration-architecture.md  driver-ui-config-refactor.md  drivers-config.md  dynamic-led-system.md  effect-rendering-architecture.md  esp32-ota.md  esp32-preferences.md  esp32.md  event-mapping-implementation-plan.md  future-plans.md  implementation-summary.md  journal.md  mame.epub  nes-audio-reference.md  ota-provisioning-plan.md  refactoring.md  release-workflow.md  todo.txt  vitest.md  windows-build-plan.md  zustand.md
docs/disassembly/: starwars_6809.asm
docs/esp32/: psram-best-practices-2025.md
docs/galaga88/: analyze_savestate.py  galaga88_score_finder.py  identify_memory_regions.py
docs/games/: galaga-memory-map.md
docs/mame_docs/: content.opf  healthwarning.xhtml  index.xhtml  license.xhtml  nav.xhtml  security.xhtml  toc.ncx  whatis.xhtml
esp32/: .clang-format  .clang-tidy  .gitignore  Makefile  TESTING.md  copy_firmware.py  generate_defaults.py  html_to_progmem.py  inject_version.py  ota_upload.sh  partitions_ota.csv  platformio.ini  upload-all-ota.sh  upload-all-serial.sh
esp32-installer/: index.html  manifest.json
esp32/html/: README.md  status.html
esp32/scripts/: coverage_link.py  native_platform_flags.py
esp32/src/: CLAUDE.md  canvas.cpp  canvas.h  config_leds.cpp  config_leds.h  config_nvs.cpp  config_nvs.h  config_portal.cpp  config_portal.h  config_timeout.h  coordinate_transforms.cpp  crash_handler.cpp  crash_handler.h  display.cpp  display.h  downsample.cpp  downsample.h  downsample_to_matrix.h  driver_config.cpp  driver_config.h  dynamic_leds.cpp  dynamic_leds.h  effect-processor.cpp  effect-processor.h  log.cpp  log.h  main.cpp  matrix.cpp  matrix.h  mqtt.cpp  mqtt.h  mqtt_config_handler.cpp  network-init.cpp  network-init.h  safe_restart.cpp  safe_restart.h  serial.cpp  serial.h  sparkle.h  sys_info.cpp  (+12 more)
esp32/tools/: i2c_scanner.cpp
interceptors/: galaga_rgfx.lua  pacman_rgfx.lua
mame/: launch.sh
mame/lua/: .luacheckrc  .stylua.toml  event.lua  ram.lua  rgfx.lua  rom_map.lua
public-docs/: .gitignore  build.sh  mkdocs.yml  requirements.txt
public-docs/docs/: CLAUDE.md  about.md  acknowledgements.md  architecture.md  example-games.md  faq.md  games.md  getting-started.md  index.md
public-docs/overrides/: sitemap.xml
public-docs/site/: 404.html  CLAUDE.html  README.md  about.html  acknowledgements.html  example-games.html  faq.html  games.html  getting-started.html  index.html  sitemap.xml
py-bridge/: bridge.py  config_example.json  ui.py
rgfx-hub/: .eslintrc.json  .gitignore  CLAUDE.md  electron-builder.config.js  electron-builder.yml  eslint.config.mjs  forge.config.js  forge.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vitest.config.ts
rgfx-hub/assets/: CLAUDE.md
rgfx-hub/config/: drivers.json
rgfx-hub/rgfx-hub/: package-lock.json
rgfx-hub/scripts/: build-electron.mjs  check-code.sh  dev-electron.mjs  generate-effect-defaults.mjs  generate-icons.js  launch-mame.sh  setup-firewall.mjs
rgfx-hub/src/: CLAUDE.md  DriverConfigManager.ts  (+45 more)
rgfx.io/: index.html  robots.txt  sitemap.xml
rgfx_network_bridge/: bridge.py  config_example.json  ui.py
scripts/: CLAUDE.md  backup-to-gdrive.js  backup-to-media.sh  bundle.sh  check-code.sh  e2e-smoke-test.py  generate-firmware-version.js  get-version.js  inject-version-driver.js  inject-version-hub.js  install-git-hooks.sh  launch-mame.bat  launch-mame.sh  prepare-release.js  release.js  sync-assets.sh  test-code.sh
tools/: gimp-header-to-sprite.mjs  gimp-indexed-sprite-extractor.mjs
tools/led-sim/: .clang-format  CLAUDE.md  CMakeLists.txt  watch.sh
tools/led-sim/src/: config.cpp  config.h  constants.h  demo.cpp  demo.h  main.cpp  raylib_compat.h  sim_display.cpp  sim_display.h  udp_listener.cpp  udp_listener.h  window.cpp  window.h  window_state.cpp  window_state.h
tools/led-sim/src/hal/: Arduino.h  driver_config.h  driver_config_stub.cpp  led_controller.cpp  platform.cpp
(+1195 files in other folders)
